<resources>
    <string name="app_name">Bank</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="login_header">Bank Login</string>
    <string name="logout">log out</string>
    <string name="register_header">Register Account</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="amount">Amount</string>

    <string name="pref_session_info">com.group2.bank.PREFERENCE_SESSION_INFO</string>

    <!-- login error -->
    <string name="username_incorrect">Username may be incorrect</string>
    <string name="password_incorrect">Password may be incorrect</string>
    <string name="username_invalid">Username may be invalid</string>
    <string name="password_invalid">Password may be invalid</string>
    <string name="amount_invalid">Amount contains invalid input</string>
    <string name="unexpected_error">Unexpected error</string>

    <!-- Security concerns for error log -->
    <string name="unauthorized_error">Unauthorized login: arrived at the logged in screen without proper credentials</string>
</resources>