<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/login_header"
            android:textAlignment="center"
            android:textAppearance="@style/Bank.Heading"/>

        <Space
            android:id="@+id/spacer2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer"
            android:layout_below="@id/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer2"
            android:layout_centerHorizontal="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:ems="18"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:id="@+id/spacer3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer_small"
            android:layout_below="@id/layout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer3"
            android:layout_centerHorizontal="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:layout_below="@+id/username"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:ems="18"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:id="@+id/spacer4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer"
            android:layout_below="@id/layout2" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer4"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/button_margin"
            android:text="@string/login" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/button_margin"
            android:text="@string/register" />
    </RelativeLayout>

</ScrollView>