<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegisterActivity"
    android:orientation="vertical">


    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/layout2" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_header"
        android:textAlignment="center"
        android:textSize="48sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:layout_below="@+id/username"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Space
            android:id="@+id/spacer2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/layout2" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer2"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:text="@string/register" />

    </RelativeLayout>

</LinearLayout>